--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     //material
     implementation 'com.google.android.material:material:1.5.0'
+    //EventBus
+    implementation 'org.greenrobot:eventbus:3.3.1'
 }
